--- a/.env.development
+++ b/.env.development
@@ -2,3 +2,8 @@ VITE_AWS_REGION=us-east-1
 VITE_AWS_COGNITO_USERPOOL_ID=us-east-1_O3qIebt1n
 VITE_AWS_COGNITO_WEBCLIENT_ID=7083ljvqgrsjrj4ledmmouq3c3
 
+
+VITE_ADAPTIVE_API_KEY=adaptive
+VITE_ADAPTIVE_API_URL=https://18crmasvb9.execute-api.us-east-1.amazonaws.com/dev/v1/analytics/add-events
+
+
