--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-query": "^5.83.0",
-    "adaptive-engine": "^1.0.99",
+    "adaptive-engine": "^2025.9.2-6.1.13",
     "aws-amplify": "^6.15.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
