--- a/.env.development
+++ b/.env.development
@@ -7,3 +7,6 @@ VITE_ADAPTIVE_API_KEY=adaptive
 VITE_ADAPTIVE_API_URL=https://18crmasvb9.execute-api.us-east-1.amazonaws.com/dev
 
 
+VITE_API_URL=https://18crmasvb9.execute-api.us-east-1.amazonaws.com/dev
+
+
