--- a/.env.development
+++ b/.env.development
@@ -2,12 +2,9 @@ VITE_AWS_REGION=us-east-1
 VITE_AWS_COGNITO_USERPOOL_ID=us-east-1_O3qIebt1n
 VITE_AWS_COGNITO_WEBCLIENT_ID=7083ljvqgrsjrj4ledmmouq3c3
 
-
-# VITE_ADAPTIVE_API_KEY=01K66WKB4AV6AP54SGKJT65BW8
-VITE_ADAPTIVE_API_KEY=01K66X34AHX1DT0K51CA9GFZ9T
+# local
+VITE_ADAPTIVE_API_KEY=01K67BBV9F51SZS5DV5D5GP23Z
 VITE_ADAPTIVE_API_URL=https://18crmasvb9.execute-api.us-east-1.amazonaws.com/dev
-
-
 VITE_API_URL=https://18crmasvb9.execute-api.us-east-1.amazonaws.com/dev
 
 
