--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-query": "^5.83.0",
     "@tanstack/react-router": "^1.132.7",
+    "@types/mapbox-gl": "^3.4.1",
     "@uiw/react-json-view": "^2.0.0-alpha.39",
     "adaptive-engine": "^2025.9.2-6.2.12",
     "adaptive.fyi": "^2025.10.0-2.0.58",
@@ -53,6 +54,7 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
+    "mapbox-gl": "^3.15.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-day-picker": "^9.11.0",
