--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-day-picker": "^9.11.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.61.1",
+    "react-map-gl": "^8.1.0",
     "react-resizable-panels": "^2.1.9",
     "react-simple-maps": "^3.0.0",
     "recharts": "^2.15.4",
